# image-processing

./: README.md  pyproject.toml
introduction_to_opencv.py/: introduction.py
numpy-basics/: np_basics.py
tryouts-exercises/: guess_a_number.py
