[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["Jakub Rutrle <rutrle@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
